--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,9 +6,9 @@ updates:
     schedule:
       interval: daily
     open-pull-requests-limit: 10
-# # Configuration for github-actions
-# - package-ecosystem: github-actions
-#   directory: /
-#   schedule:
-#     interval: daily
-#   open-pull-requests-limit: 10
+  # Configuration for github-actions
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
+    open-pull-requests-limit: 10
